--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
+
+
 /* Global Styles */
 :root {
   --primary-color: #003699;
